--- a/tox.ini
+++ b/tox.ini
@@ -62,3 +62,12 @@ changedir = .
 description = check code style, e.g. with flake8
 deps = flake8
 commands = flake8 chain_ufunc --count
+
+[flake8]
+ignore =
+    # missing whitespace around arithmetic operator
+    E226,
+    # line break before binary operator (have to choose before or after),
+    W503,
+exclude =
+    chain_ufunc/__init__.py,
