Remove baseband name from tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ envlist = test{,-alldeps,-devdeps,-cov}
 passenv = HOME,WINDIR,LC_ALL,LC_CTYPE,CC,CI
 
 # Run the tests in a temporary directory to make sure that we don't import
-# baseband from the source tree
+# code from the source tree
 changedir = .tmp/{envname}
 
 # tox environments are constructued with so-called 'factors' (or terms)
